tests/baselines/reference/overloadOnConstNoNonSpecializedSignature.errors.txt
tests/cases/compiler/overloadOnConstNoNonSpecializedSignature.ts(2,4): error TS2382: Specialized overload signature is not assignable to any non-specialized signature.


==== tests/cases/compiler/overloadOnConstNoNonSpecializedSignature.ts (1 errors) ====
    class C {
       x1(a: 'hi'); // error, no non-specialized signature in overload list
       ~~
!!! error TS2382: Specialized overload signature is not assignable to any non-specialized signature.
       x1(a: string) { }
    }
    